Require and target Java 8
 - Require Java 8 in ant build
 - use -source 1.8 and -target 1.8 for javac
 - Default scalac's -target to `jvm-1.8`, ignore and deprecate attempts
   to use `jvm-1.{6.7}`
 - Remove fragile javap-app test. The feature itself is slated for removal.
 - Remove obsolete Java6 checkfile
 - Adapt DCE tests
   - Remove deprecated/redundant -target:jvm-1.6 from flags where the
     intent was to trigger generation of stack map frames.
   - Remove tests with -target:jvm-1.5 that tested without stack
     map frames
 - Ignore OpenJDK JVM warnings (via test/[files|scaladoc]/filters).

(cherry picked from commit 8d2d3c702d2010d40ed6facb771add48999216c1)